WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130332
[GTK] MiniBrowser fails to load injected bundle lib
https://bugs.webkit.org/show_bug.cgi?id=130332
Summary
[GTK] MiniBrowser fails to load injected bundle lib
Carlos Garcia Campos
Reported
2014-03-17 06:41:01 PDT
This is because WEBKIT_INJECTED_BUNDLE_PATH env var is set too late.
Attachments
Patch
(1.53 KB, patch)
2014-03-17 06:42 PDT
,
Carlos Garcia Campos
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-03-17 06:42:29 PDT
Created
attachment 226907
[details]
Patch
Carlos Garcia Campos
Comment 2
2014-03-17 09:15:32 PDT
Committed
r165735
: <
http://trac.webkit.org/changeset/165735
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug