[GTK] MiniBrowser fails to load injected bundle lib https://bugs.webkit.org/show_bug.cgi?id=130332

Reviewed by Anders Carlsson.

This is because WEBKIT_INJECTED_BUNDLE_PATH env var is set too late.

* MiniBrowser/gtk/main.c:
(main): Make sure WEBKIT_INJECTED_BUNDLE_PATH is set before a web
process is spawn.

Canonical link: https://commits.webkit.org/148316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165735 268f45cc-cd09-0410-ab3c-d52691b4dbfc